fix: dashboard mobile layout overflow

--- a/src/components/feed-item/feed-item.scss
+++ b/src/components/feed-item/feed-item.scss
@@ -1,5 +1,5 @@
 .feed-item-container {
-  width: 250px;
-  height: 250px;
+  width: 90%;
+  height: 20rem;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2), -1px -1px 2px rgba(0, 0, 0, 0.2);
 }
